--- a/myapp/src/main/resources/static/common/style.css
+++ b/myapp/src/main/resources/static/common/style.css
@@ -1,7 +1,7 @@
 /* -------- 공통 기본 설정 -------- */
 body {
   font-family: 'Noto Sans KR', sans-serif;
-  background-color: #f4f6fb;
+  background-color: #94111360;
   margin: 0;
   padding: 0;
   display: flex;
@@ -58,7 +58,7 @@ button {
   width: 100%;
   padding: 14px;
   margin-top: 25px;
-  background-color: #3a4ca8;
+  background-color: #941113;
   color: white;
   font-size: 16px;
   font-weight: bold;
