--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -19,7 +19,7 @@ body {
   background: #fff;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
-  border: 2px solid #2196f3;
+  border: 2px solid #941113;
   border-right: none;
   display: flex;
   align-items: center;
@@ -36,7 +36,7 @@ body {
 
 .login-right {
   flex: 1;
-  background: #991b1b;
+  background: #941113;
   color: #fff;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -148,7 +148,7 @@ body {
 
 .create-account:hover {
   background: #fff;
-  color: #991b1b;
+  color: #941113;
 }
 
 @media (max-width: 900px) {
